--- a/.github/workflows/test-demo.yaml
+++ b/.github/workflows/test-demo.yaml
@@ -13,15 +13,20 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Ensure the full history is fetched
-          ref: main  # Make sure you're on the correct branch
+          ref: main  # Ensure you're checking out the correct branch
 
-      - name: Verify Cargo.toml
-        run: ls -al test-workflow/demo  # This will verify that the Cargo.toml exists in the expected directory
+      - name: Verify List Root Directory
+        run: ls -al  # List all files and folders in the root directory to verify structure
+
+      - name: Verify List Files in test-workflow
+        run: ls -al test-workflow  # List the contents of the test-workflow directory
+
+      - name: Verify List Files in test-workflow/demo
+        run: ls -al test-workflow/demo  # List the contents of test-workflow/demo directory (if it exists)
 
       - name: Update Cargo.toml with new commit hash
         run: |
           echo "Updating aptos-system-utils and aptos-indexer-test-transactions to use https://github.com/yuunlimm/test-workflow2.git with commit hash ${{ github.event.client_payload.commit_hash }}"
-          # Update both dependencies to point to the new repo with the new commit hash in the correct path
           sed -i 's/git = ".*", rev = ".*"/git = "https:\/\/github.com\/yuunlimm\/test-workflow2.git", rev = "${{ github.event.client_payload.commit_hash }}"/' test-workflow/demo/Cargo.toml
 
       - name: Commit updated Cargo.toml
@@ -34,5 +39,4 @@ jobs:
 
       - name: Run Processor Tests
         run: |
-          echo "Running processor tests for commit ${{ github.event.client_payload.commit_hash }}"
           cargo test --manifest-path=test-workflow/demo/Cargo.toml
